# serienabend-shef-telegram

./: Pipfile  README.md  pyproject.toml  setup.py
serienabend_shef_telegram/: __main__.py  config.py  exceptions.py  serienabend_shef.py  setup.py  telegram.py
